<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".NewProductoActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="207dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_nombre_producto"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/nombre"
                android:textAlignment="viewEnd"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_marca_producto"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/marca"
                android:textAlignment="viewEnd"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_genero"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/g_nero"
                android:textAlignment="viewEnd"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_categoria"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/categor_a"
                android:textAlignment="viewEnd"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="197dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_nombre"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:autofillHints=""
                android:backgroundTint="#F8F4F4"
                android:ems="10"
                android:hint="@string/nombre_del_producto"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edt_marca"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:autofillHints=""
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/marca_del_producto"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_genero"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textColor="@color/white" />

            <Spinner
                android:id="@+id/spinner_categoria"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="266dp"
        android:layout_height="138dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368"
        app:srcCompat="@drawable/noimage" />

    <Button
        android:id="@+id/bt_add"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_marginStart="52dp"
        android:backgroundTint="@color/white"
        android:onClick="confirmacion"
        android:text="@string/a_adir"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.298" />


    <Button
        android:id="@+id/bt_cancel"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:backgroundTint="@color/white"
        android:onClick="exitActivity"
        android:text="@string/cancelar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/bt_add"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.298" />

    <Button
        android:id="@+id/button"
        android:layout_width="260dp"
        android:layout_height="46dp"
        android:layout_marginStart="52dp"
        android:backgroundTint="@color/white"
        android:onClick="cargarImagen"
        android:text="@string/selecciona_una_imagen"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgView"
        app:layout_constraintVertical_bias="0.342" />

</androidx.constraintlayout.widget.ConstraintLayout>