<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="5dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="310dp"
        android:layout_height="64dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612">

        <Button
            android:id="@+id/bt_hombre"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:elevation="5dp"
            android:onClick="sectionHombres"
            android:padding="2dp"
            android:text="@string/hombre"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/bt_mujer"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:foregroundTint="#000000"
            android:onClick="sectionMujeres"
            android:text="@string/mujer"
            android:textColor="@color/black" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        android:onClick="addProducto"
        app:rippleColor="@color/black"
        android:src="@drawable/icon"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.862" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="264dp"
        android:layout_height="167dp"
        android:layout_marginTop="84dp"
        android:text="@string/msg_clothing"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>