<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ListadoProductosActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_productos"
        android:layout_width="338dp"
        android:layout_height="484dp"
        android:layout_marginBottom="108dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edt_buscar"
        android:layout_width="257dp"
        android:layout_height="59dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="4dp"
        android:autofillHints=""
        android:background="@drawable/edittextbackground"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/buscar"
        android:inputType="textPersonName"
        android:paddingHorizontal="2sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_productos"
        app:layout_constraintVertical_bias="0.355" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_buscar"
        android:layout_width="55dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:onClick="buscarProductos"
        app:layout_constraintBottom_toBottomOf="@+id/edt_buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/edt_buscar"
        app:layout_constraintTop_toTopOf="@+id/edt_buscar"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="?android:attr/actionModeWebSearchDrawable" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/productos"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rv_productos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>